# neighborhood-library

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PROMPTS.md  README.md  devbox.json  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
.claude/commands/: create-model.md  create-repo.md  create-route.md  create-schema.md  create-service.md  create-test.md
app/: config.py  dependencies.py  main.py  middleware.py
app/api/routes/: books.py  borrows.py  members.py
app/api/schemas/: book.py  borrow.py  common.py  member.py
app/core/: logging.py
app/database/: session.py  unit_of_work.py
app/database/models/: __init__.py  book.py  borrow.py  member.py
app/database/repositories/: __init__.py  book_repository.py  borrow_repository.py  member_repository.py
app/domain/: __init__.py  book.py  borrow.py  member.py
app/services/: __init__.py  book_service.py  borrow_service.py  member_service.py
docs/: ARCHITECTURE.md  api-examples.md
frontend/: .gitignore  Dockerfile  Makefile  README.md  devbox.json  next.config.ts  package-lock.json  package.json
frontend/src/app/: error.tsx  global-error.tsx  layout.tsx  page.tsx
frontend/src/app/books/: page.tsx
frontend/src/app/books/[id]/: page.tsx
frontend/src/app/borrows/: page.tsx
frontend/src/app/borrows/[id]/: page.tsx
frontend/src/app/members/: page.tsx
frontend/src/app/members/[id]/: page.tsx
frontend/src/components/books/: BookFormModal.tsx  BookTable.tsx
frontend/src/components/borrows/: BorrowFormModal.tsx  BorrowTable.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/members/: MemberFormModal.tsx  MemberTable.tsx
frontend/src/components/shared/: BackLink.tsx  DetailField.tsx
frontend/src/lib/: api.ts  constants.ts  utils.ts
frontend/src/types/: index.ts
migrations/: env.py
migrations/versions/: 3fca7f0db53c_initial_schema.py  a2031aeb0fcf_name_unique_constraints.py  b3e8c1d2f4a5_add_partial_unique_index_active_borrow.py
scripts/: seed.py
tests/: conftest.py  test_api.py  test_domain.py  test_services.py
